--- a/hw14/build.gradle
+++ b/hw14/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id'io.qameta.allure' version '2.8.0'
 }
 
-group 'org.example'
+group 'org.innopolis'
 version '1.0-SNAPSHOT'
 
 repositories {
@@ -18,7 +18,11 @@ dependencies {
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.12.4'
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
     implementation group: 'io.qameta.allure', name: 'allure-rest-assured', version: '2.14.0'
+    implementation group: 'org.apache.httpcomponents.client5', name: 'httpclient5', version: '5.1'
     testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.20.2'
+    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.26'
+    compile 'io.gsonfire:gson-fire:1.8.2'
+
 }
 
 test {
